--- a/posting/about.html
+++ b/posting/about.html
@@ -42,7 +42,8 @@
         <p><strong>H4CK 4W4Y!</strong></p>
         <div class="foot"></div>
         <div class="badge">
-          <img src="https://tryhackme-badges.s3.amazonaws.com/Trysked.png" alt="TryHackMe">
+<!--           <img src="https://tryhackme-badges.s3.amazonaws.com/Trysked.png" alt="TryHackMe"> -->
+            <script src="https://tryhackme.com/badge/54790"></script>
         </div>
       </div>
     <!-- isi -->
